--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
-    "next": "16.0.5",
     "pg": "^8.16.3",
     "prisma": "^7.0.1",
+    "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
 
     "@tailwindcss/postcss": "^4.1.17",
     "tailwindcss": "^4.1.17",
-    "autoprefixer": "^10.4.22"
-  },
-  "devDependencies": {
+    "autoprefixer": "^10.4.22",
+
+    "typescript": "^5",
     "@types/node": "^20",
-    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/pg": "^8.15.6"
+  },
+  "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.5",
-    "typescript": "^5"
+    "eslint-config-next": "16.0.5"
   }
 }
