--- a/package.json
+++ b/package.json
@@ -11,21 +11,20 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
-    "pg": "^8.16.3",
-    "prisma": "^7.0.1",
-    "next": "16.0.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-
     "@tailwindcss/postcss": "^4.1.17",
-    "tailwindcss": "^4.1.17",
-    "autoprefixer": "^10.4.22",
-
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/pg": "^8.15.6"
+    "autoprefixer": "^10.4.22",
+    "next": "16.0.5",
+    "pg": "^8.16.3",
+    "prisma": "^7.0.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0",
